--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     user: "root:root"
     ports: ["8081:8080"]
     depends_on:
-      - go_db
+      - snake_db
 
   snake_db:
     image: postgres:15-alpine
