add login, register and logout frontend

--- a/env.d/docker.d/Dockerfile
+++ b/env.d/docker.d/Dockerfile
@@ -14,6 +14,7 @@ RUN set -x && apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -
     ca-certificates && \
     rm -rf /var/lib/apt/lists/*
 
+COPY --from=builder /app/internal/templates /app/internal/templates
 COPY --from=builder /app/server /app/server
 
 CMD ["/app/server"]
