update readme, remove data race in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: build and test
         run: |
-          go test -race ./...
-          go build -race ./...
+          go test ./...
+          go build ./...
         env:
           TZ: "Europe/Moscow"
 
