--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,4 +51,6 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
       - name: build
-        run: go build ./...
+        run: |
+          go build server ./cmd/server
+          go build editor ./cmd/editor
