--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,10 @@ services:
     user: "root:root"
     ports: ["8081:8080"]
     depends_on:
-      - snake_db
-      - snake_map_editor
-
+      snake_db:
+        condition: service_healthy
+      snake_map_editor:
+        condition: service_started
   snake_map_editor:
     container_name: snake-map-editor
     build:
@@ -24,6 +25,11 @@ services:
     image: postgres:15-alpine
     container_name: snake-db
     env_file: docker.env
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     ports: ["5433:5432"]
     volumes:
       - postgres_data:/var/lib/postgresql/data
