--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
       dockerfile: ./env.d/docker.d/Dockerfile
       target: server
     user: "root:root"
-    ports: ["8081:8080"]
+    ports:
+      - "8080:8080"
+      - "443:443"
     depends_on:
       snake_db:
         condition: service_healthy
